--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,3 +76,8 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+/*ion-content{
+  background-image: url('../assets/img/clot-de-vilamala-75.jpg');
+  -webkit-background-image: url('../assets/img/clot-de-vilamala-75.jpg');
+}*/
